@@ -5,7 +5,8 @@ v0.13 (β) - 2016-xx-xx
 ======================
 - Delete StatsSettings(.track) settings model (#71).
 - Drop deprecated commands (#22).
-- Datalogger doesn't work properly with DSMR 4.2 (KAIFA-METER) #73
+- Datalogger doesn't work properly with DSMR 4.2 (KAIFA-METER) (#73).
+- Dashboard month statistics costs does not add up (#75).
 - 
 
 
